--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,28 @@
+selenium notes:
+ attempting to put the selenium tests into a suite to run them in parallel fails because
+ there is no way to allow them to keep running on failure (including using verify instead of assert)
+ we could capture the std out instead of going through the work of writing out a file, picking it up and deleting it...
+ however, the file output is much cleaner than the std out, so it's nicer to work with.
+
+survivor file gaps notes:
+ It appears that the gap years in the survivor files are intended to just split the difference,
+ however it looks like it's not consistent between rounding and flooring, e.g.:
+
+ages 62/58 = .890 (via their calculator)
+.885/.896 = 890.5 (via table), which rounds to .891 - so FLOOR is "correct" in this case
+vs.
+ages 62/64 = .923 (via their calculator)
+.917, .928 = 922.5 (via table) which rounds to 923, so ROUND is "correct" in this case. :-(
+ 
+and therefore we'll have to
+ fill in the gaps by actually running hundreds of selenium tests to actually observe the factors...
+ but that will be tricky because generally it won't use age above retirement age, it'll use normal retirement age. 
+ Alternatively, we can just unit test the ones that work, and not sweat the other ones. We could also try to request the full 
+ table from WRS.
+
 what to graph:
     income at various retirement ages (years of service)
     income at various contribution levels (and increase factors/rates of growth)
-
-
 
 assumptions to check/test:
     It seems like combined service across categories is used for the age-reduction-factor,
